--- a/DVM.conf.2.4
+++ b/DVM.conf.2.4
@@ -15,6 +15,7 @@ filter {
       mutate {
           add_field => {
             "[jsonMessage][app_name]" => "%{[event][module]}"
+            "[jsonMessage][category]" => "%{[pipeline]}"
           }
       }
     }
